Add editable table UI and writeback for Fusion Params
Introduces an interactive table for editing Fusion 360 parameters directly in code blocks, with Enter-to-save writeback to the note. Adds new settings for notifications, sorting, and unit display. Output folder is now fixed and independent of note location. Updates manifest to version 0.2.1 and improves plugin description.

--- a/obsidian-plugin/manifest.json
+++ b/obsidian-plugin/manifest.json
@@ -1,9 +1,9 @@
 {
   "id": "fusion-params-sync",
   "name": "Fusion 360 Params Sync",
-  "version": "0.1.4",
+  "version": "0.2.1",
   "minAppVersion": "1.2.0",
-  "description": "Export Fusion 360 user parameters from fenced code blocks; robust parsing with Unicode space normalization.",
+  "description": "Fusion 360 parameter sync with editable table, Enter-to-save, and fixed output folder.",
   "author": "You",
   "isDesktopOnly": true
 }
