Revamp parameter table UI with inline row actions
Improves the editable parameter table with a toolbar, inline row insert, per-row add/check/delete actions, and Enter-to-insert-below behavior. Removes writeback guard logic and updates plugin manifest to version 0.2.3 with revised description.

--- a/obsidian-plugin/manifest.json
+++ b/obsidian-plugin/manifest.json
@@ -1,9 +1,9 @@
 {
   "id": "fusion-params-sync",
   "name": "Fusion 360 Params Sync",
-  "version": "0.2.1",
+  "version": "0.2.3",
   "minAppVersion": "1.2.0",
-  "description": "Fusion 360 parameter sync with editable table, Enter-to-save, and fixed output folder.",
+  "description": "Fusion 360 parameter sync with inline row insert, Enter-to-insert-below, and per-row +/check/trash actions.",
   "author": "You",
   "isDesktopOnly": true
 }
