--- a/obsidian-plugin/manifest.json
+++ b/obsidian-plugin/manifest.json
@@ -1,9 +1,9 @@
 {
   "id": "fusion-params-sync",
   "name": "Fusion 360 Params Sync",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "minAppVersion": "1.2.0",
-  "description": "Fusion 360 parameter sync with inline row insert, Enter-to-insert-below, and per-row +/check/trash actions.",
+  "description": "Fusion 360 parameter sync with editable table, centered status, and optional tolerance preview per row.",
   "author": "You",
   "isDesktopOnly": true
 }
